--- a/editors/.nanorc
+++ b/editors/.nanorc
@@ -27,8 +27,10 @@ set functioncolor brightgreen
 ## 個別に指定するのではなく、ワイルドカード(*)で一括読み込みするのがスマートです。
 ## これにより、新しい言語設定が増えても設定を書き換える必要がありません。
 
-# 一般的な言語設定をまとめて読み込み
-include "~/.nano/*.nanorc"
+## フォルダが存在し、かつファイルがある場合のみ読み込む設定
+## （ワイルドカードを include すると、ファイルが1つもない場合にエラーになります）
+# 個別に存在を確認しながら読み込む（またはフォルダにダミーを置く）
+include "/usr/share/nano/*.nanorc"
 
 # もし monokai.nanorc が特定のフォルダにある場合は直接指定
 # (パスを ~/ に統一することで、rootでも一般ユーザーでも動くようになります)
