Manage common/.gitconfig_shared and ignore root symlink

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@
 editors/nano-syntax-highlighting/
 .gitconfig
 gitconfig
-/home/rafale/dotfiles/.gitconfig_shared
+/.gitconfig_shared
 editors/nano-syntax-highlighting/
