--- a/editors/.nanorc
+++ b/editors/.nanorc
@@ -1,18 +1,13 @@
-## =============================================================================
-## 1. 基本操作・表示設定
-## =============================================================================
-set linenumbers      # 行番号を表示
-set softwrap         # 長い行を折り返す
-set tabsize 4        # タブ幅を4に
-set tabstospaces     # タブをスペースに変換
-set constantshow     # カーソル位置（行・列）を常に表示
-#set mouse            # マウス操作を有効化（スクロールやクリックが可能に）
-set smarthome        # Homeキーを賢く（行頭と最初の文字を往復）
-set autoindent       # 前の行に合わせて自動インデント
+## editors/.nanorc (Template)
+set linenumbers
+set softwrap
+set tabsize 4
+set tabstospaces
+set constantshow
+set smarthome
+set autoindent
 
-## =============================================================================
-## 2. インターフェースの色設定
-## =============================================================================
+# インターフェースの色
 set titlecolor brightwhite,blue
 set statuscolor brightwhite,green
 set errorcolor brightwhite,red
@@ -21,21 +16,10 @@ set numbercolor yellow
 set keycolor cyan
 set functioncolor brightgreen
 
-## =============================================================================
-## 3. 構文ハイライト (外部ファイルの読み込み)
-## =============================================================================
-## 個別に指定するのではなく、ワイルドカード(*)で一括読み込みするのがスマートです。
-## これにより、新しい言語設定が増えても設定を書き換える必要がありません。
-
-## フォルダが存在し、かつファイルがある場合のみ読み込む設定
-## （ワイルドカードを include すると、ファイルが1つもない場合にエラーになります）
-# 個別に存在を確認しながら読み込む（またはフォルダにダミーを置く）
+# --- ハイライト設定 ---
+# 1. 標準のハイライトを読み込む
 include "/usr/share/nano/*.nanorc"
 
-# もし monokai.nanorc が特定のフォルダにある場合は直接指定
-# (パスを ~/ に統一することで、rootでも一般ユーザーでも動くようになります)
-include "~/.nano/syntax/monokai.nanorc"
-
-## 予備: システム標準のハイライト設定も読み込んでおく（もしあれば）
-include "/usr/share/nano/*.nanorc"
-include "~/dotfiles/editors/nano-syntax-highlighting/*.nanorc"
+# 2. リポジトリ内のハイライトを一括読み込み（Monokai含む）
+# DOTFILES_REAL_PATH は install.sh で自動置換される
+include "DOTFILES_REAL_PATH/editors/nano-syntax-highlighting/*.nanorc"
